assets/css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@400;500;600&display=swap');

:root {
	--body-color:  #FFF;
  --container-color: #FFF;
	--container-color-alt:  #FFFAF2;
  --container-color-alt2: #FFECE4;
	--text-color:  #333;
  --shadow-dark: #333;
  --text-color-light: #EEE;
	--theme-color: #C66C49;
  --theme-color-light: #F5D6AB;
  --theme-color-dark: #8B4136;
  /* rgb(139,65,54); */

    
	--body-font:  'Libre Franklin', sans-serif;

	/* .5rem = 8px, 1rem = 16px, 1.5rem = 24px ... */
  --biggest-font-size: 1.8rem;
  --bigger-font-size: 1.4rem;
  --big-font-size: 1.2rem;
  --h1-font-size: 1.5rem;
  --h2-font-size: 1.25rem;
  --h3-font-size: 1.125rem;
  --h4-font-size: 1.080rem;
  --h5-font-size: 1rem;
  --normal-font-size: .938rem;
  --small-font-size: .813rem;
  --smaller-font-size: .75rem;

  --font-normal:  400;
  --font-medium:  500;
  --font-semi-bold:  600;

  --z-tooltip:  10;
  --z-fixed:  100;
  --z-modal:  1000;

  --m-left: -180%;
  /* // Extra small devices (portrait phones, less than 576px)
  // No media query for `xs` since this is the default in Bootstrap

  // Small devices (landscape phones, 576px and up)
  @media (min-width: 576px) { ... }

  // Medium devices (tablets, 768px and up)
  @media (min-width: 768px) { ... }

  // Large devices (desktops, 992px and up)
  @media (min-width: 992px) { ... }

  // Extra large devices (large desktops, 1200px and up)
  @media (min-width: 1200px) { ... } 
  
  @media (min-width: 576px) { }
  @media (min-width: 768px) { }
  @media (min-width: 992px) { }
  @media (min-width: 1200px) { }
  
  */


  --xs-height: 100vh;
  --sm-height: 100vh;
  --md-height: 64vh;
  --lg-height: 64vh;
  --xl-height: 56;
  --section-height: var(--xs-height);
}

@media (min-width: 992px) {
  :root {
    --big-font-size: 1.6rem;
    --h1-font-size: 2.25rem;
    --h2-font-size: 1.5rem;
    --h3-font-size: 1.25rem;
    --h4-font-size: 1.180rem;
    --h5-font-size: 1.100rem;
    --normal-font-size: 1rem;
    --small-font-size: .975rem;
    --smaller-font-size: .813rem;
  }
}

@media (min-width: 1200px) { 
  :root {
    --big-font-size: 2rem;
    --h1-font-size: 2.8125rem;
    --h2-font-size: 1.875rem;
    --h3-font-size: 1.5625rem;
    --h4-font-size: 1.360rem;
    --h5-font-size: 1.275rem;
    --normal-font-size: 1.25rem;
    --small-font-size: 1.21875rem;
    --smaller-font-size: 1rem;
  }
}

* {
	padding: 0;
	margin: 0;
	box-sizing: border-box;
}

html {
	scroll-behavior: smooth;
}

body {
	font-family: var(--body-font);
  font-size: var(--normal-font-size);
  font-weight: var(--font-normal);
  color: var(--text-color);
  background-color: var(--container-color-alt2);
}

h1 { font-size: var(--h1-font-size);}
h2 { font-size: var(--h2-font-size);}
h3 { font-size: var(--h3-font-size);}
h4 { font-size: var(--h4-font-size);}
h5 { font-size: var(--h5-font-size);}

ul {
    list-style: none;
}

a {
    text-decoration: none;
}

a:hover {
  text-decoration: none;
}


img {
    max-width: 100%;
    height: auto;
} 

iframe {
  min-height: 400px;
  width: 100%;
  height: 100%;
}

.xs--padded {
  /* 
  triggered at 360px ::
  
  padding-left: 24px;
  padding-right: 24px; */
}

.btn--link {
  padding: .5em 1em;
  border-radius: .2rem;
  background-color: var(--theme-color);
  font-size: var(--normal-font-size);
}

/* override input:focus border color */
.form-control:focus {
  border-color: var(--theme-color-light);
  box-shadow: inset 0 0 2px 1px var(--theme-color-dark);
}

.content__frame {
  padding: 2.4rem 0 1.8rem;
  margin: 0 auto;
}

.section:nth-child(odd) {
	background-color: var(--container-color-alt);
}

.section:nth-child(even) {
	background-color: var(--container-color);
}

.section__title {
	font-size: var(--h1-font-size);
  color: var(--theme-color-dark);
  font-weight: var(--font-medium);
}

.section__subtitle {
	display:  block;
	font-size:  var(--normal-font-size);
  font-weight: var(--font-medium);
  color: var(--theme-color);
  padding: 0 1.6rem;
  margin-bottom: 2rem;
}

.section__title,
.section__subtitle {
	text-align:  center;
}

@media (max-width: 360px) {
  .xs--padded {
      padding-left: 24px;
      padding-right: 24px;
  }
}
@media (min-width: 576px) {
  .xs--padded { }

  .content__frame {
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width: 768px) { }

@media (min-width: 992px) { }

@media (min-width: 1200px) { 
  .content__frame {
    padding-top: 3em;
    padding-bottom: 3em;
  }
}

/* ======================= extra ======================================*/

#btnBackToTop {
  display: none;
  position: fixed;
  bottom: 1rem;
  right: 1.5rem;
  z-index: var(--z-modal);
  font-size: var(--biggest-font-size);
  font-weight: var(--font-semi-bold);
  border: none;
  outline: none;
  background-color: rgba(139,65,54,0.5);
  color: var(--text-color-light);
  cursor: pointer;
  padding: .128rem .7rem;
  border-radius: 6px;
}

#btnBackToTop:hover {
  background-color: var(--theme-color-dark);
  color: var(--theme-color-light);
}

#btnBackToTop.button--show {
  display: block;
}

/* ======================= navbar ============================================*/
.navbar {
  background-color: #222;
}

.navbar a,
.navbar .toggler__icon {
  /* color: #fff; */
  color: var(--theme-color-light);
}

.navbar a:hover,
.navbar .toggler__icon:hover {
  text-decoration: none;
  color: var(--theme-color);
}

.navbar .brand {
  font-size: var(--big-font-size);
  padding: .25rem .75rem;
}

.navbar .nav__link {
  display: inline-block;
  margin: .312rem 0;
}

@media (min-width: 576px) { }
@media (min-width: 768px) { }
@media (min-width: 992px) { }
@media (min-width: 1200px) { }
/* ======================= home / carousel ====================================*/
.home {
  padding: 0;
  margin: 0;
  background: linear-gradient(to bottom left, var(--theme-color) 51%, var(--theme-color-dark) 100%);
  color: var(--theme-color-light);
  position: relative;
}

.home a {
  color: var(--text-color-light);
}
/* ... */

